fix route change scroll to top issue, sticky issue and mobile menu overflow problems

--- a/styles/globals.css
+++ b/styles/globals.css
@@ -38,7 +38,10 @@
 html,
 body {
   height: 100%;
-  overflow-x: hidden !important;
+}
+
+body {
+  overflow-x:hidden;
 }
 
 a {
